充实了第一个react练习

--- a/app/firstTest/first.html
+++ b/app/firstTest/first.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>第一个react文件</title>
     <script type="text/javascript" src="./../../bower_components/react/react.min.js"></script>
     <script type="text/javascript" src="./../../bower_components/react/react-dom.min.js"></script>
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div id="content"></div>
+    <div id="contentOther"></div>
     <script type="text/babel" src="first.js"></script>
 </body>
 </html>
