扩展练习二

--- a/app/secondTest_useProps/index.html
+++ b/app/secondTest_useProps/index.html
@@ -7,9 +7,14 @@
     <script type="text/javascript" src="./../../bower_components/react/react-dom.min.js"></script>
     <!--react解码器-->
     <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
+    <!--第三方库-->
+    <script type="text/javascript" src="./../../bower_components/remarkable/remarkable.min.js"></script>
 </head>
 <body>
+    <h1>例子一</h1>
     <div id="content"></div>
+    <h1>例子二</h1>
+    <div id="list"></div>
     <script type="text/babel" src="index.js"></script>
 </body>
 </html>
