--- a/app/refsText/index.html
+++ b/app/refsText/index.html
@@ -17,6 +17,10 @@
     <div id="content3"></div>
     <h1>例子四,给复合组件附加回调函数ref</h1>
     <div id="content4"></div>
+    <h1>例子五, referenced component is unmounted </h1>
+    <div id="content5"></div>
+    <h1>例子六, Stateless Functions </h1>
+    <div id="content6"></div>
     <script type="text/babel" src="index.js"></script>
 </body>
 </html>
