--- a/app/Add-on_animation/index.html
+++ b/app/Add-on_animation/index.html
@@ -2,9 +2,37 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Add-on_animation</title>
+    <style type="text/css">
+        .enter {
+            opacity: 0.01;
+        }
+
+        .enter.enter-active {
+            opacity: 1;
+            transition: opacity 500ms ease-in;
+        }
+
+        .leave {
+            opacity: 1;
+        }
+
+        .leave.leave-active {
+            opacity: 0.01;
+            transition: opacity 300ms ease-in;
+        }
+        .appear{
+            opacity: 0.01;
+        }
+        .appear.appear-active{
+            opacity: 1;
+            transition: opacity 500ms ease-in;
+        }
+    </style>
 </head>
 <body>
+    <div id="content">
+    </div>
 
 </body>
 </html>
